Sustitución de métodos obsoletos (algunos próximos a ser eliminados)