@@ -9,7 +9,7 @@ import org.jnetpcap.packet.PcapPacket;
 /** 
  * Clase PacketAnalyzer. 
  * 
- * @author Jose Manuel Saiz, Rodrigo Sánchez
+ * @author Jose Manuel Saiz, Rodrigo Sï¿½nchez
  * @author jmsaizg@gmail.com, rsg0040@alu.ubu.es
  * @version 1.3 
 */
@@ -25,7 +25,7 @@ public class PacketAnalyzer extends JDPacketAnalyzer
     /** Metodo  donde se analiza el paquete recibido y se sabe su protocolo es o no de tipo ARP.
      * @param PcapPacket p 
      * @return boolean 
-     * @exception exceptions Ningún error (Excepción) definida
+     * @exception exceptions Ningï¿½n error (Excepciï¿½n) definida
      */
     public boolean isAnalyzable(PcapPacket packet)
     {
@@ -45,7 +45,7 @@ public class PacketAnalyzer extends JDPacketAnalyzer
      * con un tipo de protocolo ARP.
      * @param PcapPacket p 
      * @return sin valor de retorno
-     * @exception exceptions Ningún error (Excepción) definida
+     * @exception exceptions Ningï¿½n error (Excepciï¿½n) definida
      */  
     public void analyze(PcapPacket p)
     {
@@ -58,7 +58,7 @@ public class PacketAnalyzer extends JDPacketAnalyzer
             return (new Date(packet.getCaptureHeader().hdr_sec()+ packet.getCaptureHeader().hdr_usec()).toString());
         	//return (new Date(packet.sec * 1000L + packet.usec / 1000L)).toString();
         if(name.equals(valueNames[1]))
-          return new Integer(packet.getCaptureHeader().caplen());
+          return Integer.valueOf(packet.getCaptureHeader().caplen());
         	// return new Integer(packet.caplen);
         else
             return null;
@@ -74,7 +74,7 @@ public class PacketAnalyzer extends JDPacketAnalyzer
 //            return (new Date(packet.sec * 1000L + packet.usec / 1000L)).toString();
 
         case 1: // '\001'
-            return new Integer (packet.getCaptureHeader().caplen());
+            return Integer.valueOf(packet.getCaptureHeader().caplen());
         	//return new Integer(packet.caplen);
         }
         return null;
@@ -85,7 +85,7 @@ public class PacketAnalyzer extends JDPacketAnalyzer
         Object v[] = new Object[2];
         v[0] = (new Date(packet.getCaptureHeader().hdr_sec()+ packet.getCaptureHeader().hdr_usec()).toString());
         //v[0] = (new Date(packet.sec * 1000L + packet.usec / 1000L)).toString();
-        v[1] = new Integer (packet.getCaptureHeader().caplen());
+        v[1] = Integer.valueOf(packet.getCaptureHeader().caplen());
         // v[1] = new Integer(packet.caplen);
         return v;
     }
